soc-system/root/api/backend/error.log
  File "D:\Cyber\soc-system\backend\main.py", line 95
    try:
        ^
IndentationError: unindent does not match any outer indentation level
